@startuml
'https://plantuml.com/class-diagram

skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle

interface Command <<interface>> {
    + execute(ItemList items, CategoryList categories, Ui ui): void
}

class Parser {
    + {static} parse(line: String, items: ItemList, categories: CategoryList, ui: Ui, storage: TransactionStorage): void
    - {static} parseCommand(line: String, storage: TransactionStorage): Command
    - {static} handleUnknownCommand(line: String, ui: Ui): void
    - {static} extractFirstWord(line: String): String
}

class AddCommand
class DeleteCommand
class EditDescriptionCommand
class EditPriceCommand
class EditQuantityCommand
class EditCategoryCommand
class AddCategoryCommand
class DeleteCategoryCommand
class ListCategoriesCommand
class TransactCommand
class ShowTransactionHistoryCommand
class FindCommand
class ListCommand
class FilterCommand
class HelpCommand
class ExitCommand

class TypoDetector
class ItemList
class CategoryList
class TransactionStorage
class Ui

' Relationships
Parser -> Command : <<creates>>
Parser --> TypoDetector : <<uses>>
Parser --> Ui : <<uses>>
Parser -right-> ItemList : passes >
Parser -right-> CategoryList : passes >
Parser -right-> TransactionStorage : passes >

Command --> Ui : <<uses>>
Command -left-> ItemList : passes >
Command -left-> CategoryList : passes >

AddCommand ...down|> Command
DeleteCommand ..down|> Command
EditDescriptionCommand ...down|> Command
EditPriceCommand ..down|> Command
EditQuantityCommand ...down|> Command
EditCategoryCommand ...down|> Command
AddCategoryCommand ...down|> Command
DeleteCategoryCommand ...down|> Command
TransactCommand ...down|> Command

ShowTransactionHistoryCommand ...up|> Command
FindCommand ..up|> Command
ListCommand ...up|> Command
ListCategoriesCommand ...up|> Command
FilterCommand ..up|> Command
HelpCommand ...up|> Command
ExitCommand ..up|> Command

@enduml